# 42stuff

./: README.md
Born2beroot/: README.md  signature.txt
a_maze_ing/: Makefile  README.md  a_maze_ing.py  config.txt  mazegen-0.1.0-py3-none-any.whl  output_maze.txt  pyproject.toml
a_maze_ing/src/input_parsing/: __init__.py  input_parsing.py
a_maze_ing/src/mazegen/: __init__.py  a_star.py  algorithms.py  generator.py  kruskal.py  maze.py  rdfs.py
ft_printf/: Makefile  ft_printf.c  ft_printf.h  main.c
ft_printf/src/: ft_print_char.c  ft_print_decimal.c  ft_print_hexl.c  ft_print_hexu.c  ft_print_integer.c  ft_print_percent.c  ft_print_ptr.c  ft_print_str.c  ft_print_unsigned.c  ft_putchar.c  ft_putnbr_base.c  ft_putstr.c  ft_strlen.c
gnl/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  hi.txt  test.txt
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+7 more)
py (copy)/p04/: sample_data.json
py (copy)/p06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  (+1 more)
(+150 files in other folders)
