[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "0.1.0"
description = "Python Maze Generation Package"
authors = [
    {name = "wgan" },
    {name = "mmerican" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.0.0",
    "build>=1.4.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mazegen*"]